--- a/app.json
+++ b/app.json
@@ -7,5 +7,11 @@
     {
       "url": "https://github.com/zidizei/heroku-buildpack-tsc#v2.0"
     }
-  ]
+  ],
+  "env": {
+    "APP_NAME": {
+      "description": "Your site's name.",
+      "value": "Example site"
+    }
+  }
 }
